--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -194,7 +194,7 @@
                                 <div class="panel panel-warning color7">
                                         <div class="panel-heading">
                                                 <h4 class="panel-title">
-                                                        <a data-toggle="collapse" data-parent="#category_collapse" href="#collapseFurniture">
+                                                        <a data-toggle="collapse" data-parent="#collapseAll" href="#collapseFurniture">
                                                             <span class="color4" onclick="fridgeApp.filterMainCategory('furniture')">
                                                                 Furniture
                                                             </span>
@@ -215,7 +215,7 @@
                                 <div class="panel panel-warning color7">
                                                 <div class="panel-heading">
                                                     <h4 class="panel-title">
-                                                        <a data-toggle="collapse" data-parent="#category_collapse" href="#collapseAppliances">
+                                                        <a data-toggle="collapse" data-parent="#collapseAll" href="#collapseAppliances">
                                                             <span class="color4" onclick="fridgeApp.filterMainCategory('appliances')">
                                                                 Appliances
                                                             </span>
@@ -235,7 +235,7 @@
                                 <div class="panel panel-warning color7">
                                         <div class="panel-heading">
                                                 <h4 class="panel-title">
-                                                        <a data-toggle="collapse" data-parent="#category_collapse" href="#collapseVehicles">
+                                                        <a data-toggle="collapse" data-parent="#collapseAll" href="#collapseVehicles">
                         <span class="color4" onclick="fridgeApp.filterMainCategory('vehicles')">
                             Vehicles
                         </span>
@@ -255,7 +255,7 @@
                                 <div class="panel panel-warning color7">
                                         <div class="panel-heading">
                                                 <h4 class="panel-title">
-                                                        <a data-toggle="collapse" data-parent="#category_collapse" href="#collapseElectronics">
+                                                        <a data-toggle="collapse" data-parent="#collapseAll" href="#collapseElectronics">
                         <span class="color4" onclick="fridgeApp.filterMainCategory('electronics')">
                             Electronics
                         </span>
@@ -277,7 +277,7 @@
                                 <div class="panel panel-warning color7">
                                         <div class="panel-heading">
                                                 <h4 class="panel-title">
-                                                        <a data-toggle="collapse" data-parent="#category_collapse" href="#collapseCutlery">
+                                                        <a data-toggle="collapse" data-parent="#collapseAll" href="#collapseCutlery">
                         <span class="color4" onclick="fridgeApp.filterMainCategory('cutlery')">
                             Cutlery
                         </span>
@@ -296,7 +296,7 @@
                                 <div class="panel panel-warning color7">
                                         <div class="panel-heading">
                                                 <h4 class="panel-title">
-                                                        <a data-toggle="collapse" data-parent="#category_collapse" href="#collapseSupplies">
+                                                        <a data-toggle="collapse" data-parent="#collapseAll" href="#collapseSupplies">
                         <span class="color4" onclick="fridgeApp.filterMainCategory('supplies')">
                             Supplies
                         </span>
@@ -317,7 +317,7 @@
                                 <div class="panel panel-warning color7">
                                         <div class="panel-heading">
                                                 <h4 class="panel-title">
-                                                        <a data-toggle="collapse" data-parent="#category_collapse" href="#collapseBooks">
+                                                        <a data-toggle="collapse" data-parent="#collapseAll" href="#collapseBooks">
                         <span class="color4" onclick="fridgeApp.filterMainCategory('books')">
                             Books
                         </span>
@@ -337,7 +337,7 @@
                                 <div class="panel panel-warning color7">
                                         <div class="panel-heading">
                                                 <h4 class="panel-title">
-                                                        <a data-toggle="collapse" data-parent="#category_collapse" href="#collapseClothes">
+                                                        <a data-toggle="collapse" data-parent="#collapseAll" href="#collapseClothes">
                         <span class="color4" onclick="fridgeApp.filterMainCategory('clothes')">
                                                                 Clothes
                         </span>
@@ -358,7 +358,7 @@
                                 <div class="panel panel-warning color7">
                                 <div class="panel-heading">
                                         <h4 class="panel-title">
-                                                <a data-toggle="collapse" data-parent="#category_collapse" href="#collapseBed">
+                                                <a data-toggle="collapse" data-parent="#collapseAll" href="#collapseBed">
                 <span class="color4" onclick="fridgeApp.filterMainCategory('bed')">
                     Bed
                 </span>
